# GCP

./: CMakeLists.txt  README.md
src/ParallelRayTracer/: Camera.cpp  Camera.h  Core.cpp  Core.h  Light.cpp  Light.h  Object.h  ParallelRayTracer.h  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h  Sphere.cpp  Sphere.h  macros.h
src/exec/: main.cpp
